# CryptoPrice

./: .gitignore  main.py  pyproject.toml
src/: config.py  db.py  docker-compose.yml  get_current_user.py  main.py  redis_connect.py  tests.py
src/account/: account_router.py  account_shema.py
src/auth/: auth_router.py  auth_shema.py  auth_utilits.py
src/auth/tokens/: private_key.pem  public_key.pem
src/client/: WebsocetConnect.py  client_router.py  client_shema.py  crypto_price_watcher.py
src/enum/: CurrencyEnum.py
src/models/: AccountModel.py  UserModel.py
src/trade/: trade_router.py
test/: conftest.py  test_main.py  test_users_reg.py
